<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:layout_width="match_parent"
        android:padding="20dp"
        android:background="@color/colorSecondary">
        <TextView
            android:layout_width="match_parent"
            android:layout_weight="0"
            android:textColor="@color/colorPrimary"
            android:text="@string/log_title"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="1"
            android:textColor="@color/colorPrimary"
            android:id="@+id/log_id"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:padding="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/log_date"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:id="@+id/log_date"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:padding="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/log_transition"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:id="@+id/log_transition"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:padding="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/log_operator"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:id="@+id/log_operator"/>
    </TableRow>


</TableLayout>
